--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 <body>
 
   <h1>🍳 Easy Cook App</h1>
-  <p id="test">If you see this, HTML is working.</p>
+  <input 
+  type="text" 
+  id="searchInput" 
+  placeholder="Search a recipe..." 
+/>
 
-  <button id="testBtn">Click me</button>
+<button id="searchBtn">Search</button>
+
+<div id="recipeContainer"></div>
 
   <script src="js/app.js"></script>
 </body>
