--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Easy Cook App</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
+<header>
+  <nav class="navbar">
+    <div class="logo">Easy Cook </div>
+
+
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- Menu -->
+    <ul class="menu" id="menu">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+  </nav>
+</header>
+
 <body>
 
   <h1>🍳 Easy Cook App</h1>
-  <input 
-  type="text" 
-  id="searchInput" 
-  placeholder="Search a recipe..." 
-/>
+  <input type="text" id="searchInput" placeholder="Search a recipe..." />
 
-<button id="searchBtn">Search</button>
+  <button id="searchBtn">Search</button>
 
-<div id="recipeContainer"></div>
+  <div id="recipeContainer"></div>
 
   <script src="js/app.js"></script>
+  <footer id="main-footer"></footer>
 </body>
+
 </html>
