--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <div id="recipeContainer"></div>
 
   <script src="js/app.js"></script>
+  <script src="js/menu.js"></script>
   <footer id="main-footer"></footer>
 </body>
 
