--- a/index.html
+++ b/index.html
@@ -6,37 +6,39 @@
   <title>Easy Cook App</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<header>
-  <nav class="navbar">
-    <div class="logo">Easy Cook </div>
-
-
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-
-    <!-- Menu -->
-    <ul class="menu" id="menu">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
-  </nav>
-</header>
 
 <body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Easy Cook</div>
 
-  <h1>🍳 Easy Cook App</h1>
-  <input type="text" id="searchInput" placeholder="Search a recipe..." />
+      <!-- Hamburger button -->
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
 
-  <button id="searchBtn">Search</button>
+      <!-- Menu -->
+      <ul class="menu" id="menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div id="recipeContainer"></div>
+  <main>
+    <h1>🍳 Easy Cook App</h1>
+    <input type="text" id="searchInput" placeholder="Search a recipe..." />
+    <button id="searchBtn">Search</button>
+    <div id="recipeContainer"></div>
+  </main>
 
+  <footer id="main-footer"></footer>
+
+  <!-- Scripts -->
   <script src="js/app.js"></script>
   <script src="js/menu.js"></script>
-  <footer id="main-footer"></footer>
 </body>
 
 </html>
