--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     <div id="recipeContainer"></div>
   </main>
 
+    <section id="gallery">
+    <h2>Our Favorite Recipes</h2>
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <img src="images/recipe1.jpg" alt="Recipe 1">
+      </div>
+      <div class="gallery-item">
+        <img src="images/recipe2.jpg" alt="Recipe 2">
+      </div>
+      <div class="gallery-item">
+        <img src="images/recipe3.jpg" alt="Recipe 3">
+      </div>
+    </div>
+  </section>
+
   <footer id="main-footer"></footer>
 
   <!-- Scripts -->
