--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
     <div id="recipeContainer"></div>
   </main>
 
-    <section id="gallery">
+  <section id="gallery">
     <h2>Our Favorite Recipes</h2>
     <div class="gallery-container">
       <div class="gallery-item">
-        <img src="images/recipe1.jpg" alt="Recipe 1">
+        <img src="images/imfoodone.jpg" alt="Recipe 1">
       </div>
       <div class="gallery-item">
-        <img src="images/recipe2.jpg" alt="Recipe 2">
+        <img src="images/close-up-view-vegetables-as-pepper-tomato-lettuce-garlic-others.jpg" alt="Recipe 2">
       </div>
       <div class="gallery-item">
-        <img src="images/recipe3.jpg" alt="Recipe 3">
+        <img
+          src="images/front-view-egg-toasts-with-tomatoes-salad-white-background-breakfast-lunch-food-meal-color-salad.jpg"
+          alt="Recipe 3">
       </div>
     </div>
   </section>
