--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2>Our Favorite Recipes</h2>
     <div class="gallery-container">
       <div class="gallery-item">
-        <img src="images/imfoodone.jpg" alt="Recipe 1">
+        <img src="images/front-view-egg-toasts-with-tomatoes-salad-white-background-breakfast-lunch-food-meal-color-salad.jpg" alt="Recipe 1">
       </div>
       <div class="gallery-item">
         <img src="images/close-up-view-vegetables-as-pepper-tomato-lettuce-garlic-others.jpg" alt="Recipe 2">
