--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
   </main>
 
   <section id="gallery">
-    <h2>Our Favorite Recipes</h2>
+    <h2>Food is our love language</h2>
     <div class="gallery-container">
       <div class="gallery-item">
-        <img src="images/front-view-egg-toasts-with-tomatoes-salad-white-background-breakfast-lunch-food-meal-color-salad.jpg" alt="Recipe 1">
+        <img
+          src="images/front-view-egg-toasts-with-tomatoes-salad-white-background-breakfast-lunch-food-meal-color-salad.jpg"
+          alt="Recipe 1">
       </div>
       <div class="gallery-item">
         <img src="images/close-up-view-vegetables-as-pepper-tomato-lettuce-garlic-others.jpg" alt="Recipe 2">
