--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <input type="text" id="searchInput" placeholder="Search a recipe..." />
     <button id="searchBtn">Search</button>
     <div id="recipeContainer"></div>
+    <section id="favorites">
+  <h2>❤️ My Favorite Recipes</h2>
+  <div id="favoritesContainer"></div>
+</section>
+
   </main>
 
   <section id="gallery">
