--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
       <!-- Menu -->
       <ul class="menu" id="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
@@ -34,9 +34,9 @@
     <button id="searchBtn">Search</button>
     <div id="recipeContainer"></div>
     <section id="favorites">
-  <h2>❤️ My Favorite Recipes</h2>
-  <div id="favoritesContainer"></div>
-</section>
+      <h2>❤️ My Favorite Recipes</h2>
+      <div id="favoritesContainer"></div>
+    </section>
 
   </main>
 
