--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <p> Hi! I'm , the creator of Easy Cook. This app helps you search for recipes, see their ingredients, and
                 check the nutritional information for each dish.</p>
             <p> Built with pure HTML, CSS, and JavaScript, using <strong>TheMealDB</strong> and <strong>Open Food
-                    Facts</strong> to fetch the data.</p>
+                    Facts</strong></p>
             <p> Save your favorite recipes and discover new dishes to cook.</p>
             <p> Because cooking and coding can go hand in hand!</p>
         </section>
