--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="about">
-            <h2>About Easy Cook</h2>
+            <h2>🍳 About Easy Cook</h2>
             <p> Hi! I'm , the creator of Easy Cook. This app helps you search for recipes, see their ingredients, and
                 check the nutritional information for each dish.</p>
             <p> Built with pure HTML, CSS, and JavaScript, using <strong>TheMealDB</strong> and <strong>Open Food
