adding more text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
   <main>
     <h1>🍳 Easy Cook App</h1>
+    <p class="intro-text">
+      Welcome to <strong>Easy Cook</strong>! 🍳 Discover delicious recipes, check their ingredients and calories, and
+      save your favorites to cook anytime.
+      Whether you're a beginner or a foodie, find inspiration for your next meal!
+    </p>
+
     <input type="text" id="searchInput" placeholder="Search a recipe..." />
     <button id="searchBtn">Search</button>
     <div id="recipeContainer"></div>
