--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo" href="index.html">Easy Cook</div>
+      <div class="logo">Easy Cook</div>
 
       <!-- Hamburger button -->
       <div class="hamburger" id="hamburger">
