probando nuevo codigo

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
       <h2>❤️ My Favorite Recipes</h2>
       <div id="favoritesContainer"></div>
     </section>
+<section id="shopping-list">
+  <h2> Shopping List</h2>
+  <div id="shoppingContainer">
+    <p>No items yet</p>
+  </div>
+  <button id="clearListBtn">Clear List</button>
+</section>
 
   </main>
 
