--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <main>
         <section id="about">
             <h2>🍳 About Easy Cook</h2>
-            <p> Hi! I'm , the creator of Easy Cook. This app helps you search for recipes, see their ingredients, and
+            <p> Hi! I'm Melissa, the creator of Easy Cook. This app helps you search for recipes, see their ingredients, and
                 check the nutritional information for each dish.</p>
             <p> Built with pure HTML, CSS, and JavaScript, using <strong>TheMealDB</strong> and <strong>Open Food
                     Facts</strong></p>
