--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>🍳 Easy Cook App</h1>
     <div class="intro-section">
       <p class="intro-text">
-        🍳 Welcome to <strong>Easy Cook</strong>! Discover delicious recipes, check their ingredients and calories, and
+        Welcome to <strong>Easy Cook</strong>! Discover delicious recipes, check their ingredients and calories, and
         save your favorites to cook anytime.
         Whether you're a beginner or a foodie, find inspiration for your next meal!
       </p>
@@ -46,7 +46,7 @@
     <div id="recipeContainer"></div>
 
     <section id="favorites">
-      <h2>❤️ My Favorite Recipes</h2>
+      <h2>My Favorite Recipes</h2>
       <div id="favoritesContainer"></div>
     </section>
 <section id="shopping-list">
